--- a/Readme
+++ b/Readme
@@ -11,16 +11,17 @@ https://github.com/Rushikesh005/vlc_subDownloader/archive/master.zip
 
 Prerequisites
 =============
-note: *You need to have python 2.7 and vlc installed on your machine.
+note: 1.You need to have python 2.7 and vlc installed on your machine.
 
-      *Supported operating systems are windows xp,vista,7,8 and 8.1 etc
+      2.Supported operating systems are windows xp,vista,7,8 and 8.1 etc
 
-      *pyqt should be installed on your system.
+      3.pyqt should be installed on your system.
        You can download pyqt4 at:
        http://www.riverbankcomputing.com/software/pyqt/download
 
 Installation
 ============
+
 It's a python script so there is no need of any installation.But
 Step 1:Extract zip to convenient location.
 Step 2:Open desired video with vlc_sub.cmd.
@@ -45,7 +46,8 @@ Program is under development phase.If you find any bugs please mail us.
 Contact
 =======
  * Initial commits are done in the git repository at,
+   https://github.com/Rushikesh005/vlc_subDownloader
 
 If you have any hints, changes or improvements, please contact:
 
- * Rushikesh Patil rushikesh.patil003@gmail.com
+ * Rushikesh Patil mailto:rushikesh.patil003@gmail.com
