--- a/Readme
+++ b/Readme
@@ -50,4 +50,4 @@ Contact
 
 If you have any hints, changes or improvements, please contact:
 
- * Rushikesh Patil mailto:rushikesh.patil003@gmail.com
+ * Rushikesh Patil rushikesh.patil003@gmail.com
